 cnp-mitre-postgresql-port-97h95ds.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-postgresql-port-xcf3z2w
  namespace: kube-system
spec:
  description: "This Policy will Protect PostgreSQL External Access from unknown IP's"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromCIDRSet:
        - cidr: 0.0.0.0/0  # Change this to your CIDR set
      toPorts:
        - ports:
            - port: "5432"
              protocol: ANY
